[package]
name = "contribute-count"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
graphql_client = "0.14.0"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features=false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = ["full"] }
